# JavlibraryScrapy

./: Model.graffle  README.md
assets/imgs/: img.pxd
backend/: README.md  config.yaml  db_operations.py  main.py  models.py  mysql.md  pyproject.toml
backend/db_op/: __init__.py  tools.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Detail.tsx  Home.tsx
scrapyJAV/: README.md  config.yaml  database_structure.sql  main.py  pyproject.toml  scrapy.cfg  scrapyjav.sql
scrapyJAV/dbop/: mongo_op.py  mysql_op.py
scrapyJAV/scrapyJAV/: items.py  middlewares.py  pipelines.py  settings.py
scrapyJAV/scrapyJAV/config/: arguments.py  database_config.py
scrapyJAV/scrapyJAV/spiders/: works_spider.py
scrapyJAV/tools/: guide_info.py
